--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ script:
   - bin/form_builder_spec
 
 notifications:
-  on_success: never
-  on_failure: always
+  email:
+    on_success: never
+    on_failure: always
