--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,9 +4,11 @@ name: Tests
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
   pull_request:
-    branches: "*"
+    branches: 
+      - "*"
 
 jobs:
   specs:
@@ -20,6 +22,9 @@ jobs:
           - 1.0.0
           - 1.1.0
           - 1.2.0
+          - 1.3.0
+          - 1.4.0
+          - 1.5.0
         include:
           - shard_file: shard.yml
             crystal_version: latest
