--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,37 +2,32 @@ name: Tests
 
 on:
   push:
-    branches:
-      - master
+    branches: ['master']
   pull_request:
-    branches:
-      - "*"
 
 jobs:
   specs:
+    runs-on: ubuntu-latest
+
     strategy:
       fail-fast: false
       matrix:
         shard_file:
           - shard.yml
         crystal_version:
-          - 0.36.1
-          - 1.0.0
-          - 1.1.0
-          - 1.2.0
-          - 1.3
-          - 1.4
-          - 1.5
-          - 1.6
-          - 1.7
-        include:
-          - shard_file: shard.yml
-            crystal_version: latest
-            ignore_errors: true
-
-    runs-on: ubuntu-latest
-    continue-on-error: ${{ matrix.ignore_errors || false }}
-    container: crystallang/crystal:${{ matrix.crystal_version }}
+          - "0.36.1"
+          - "1.0"
+          - "1.1"
+          - "1.2"
+          - "1.3"
+          - "1.4"
+          - "1.5"
+          - "1.6"
+          - "1.7"
+          - "1.8"
+          - "1.9"
+          - "1.10"
+          - "latest"
 
     steps:
       - name: Download source
